[tool.poetry]
name = "pydevmgr_elt"
version = "0.6a1"
description = "pydevmgr pluggin for Elt devices"
license = "CeCILL Free Software License Agreement v2.1"
authors = ["Sylvain Guieu <sylvain.guieu@univ-grenoble-alpes.fr>"]
readme = "README.md"
packages = [{include = "pydevmgr_elt"}]

[tool.poetry.dependencies]
python = "^3.7"
pydevmgr-ua = "0.6.a0"
jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[tool.poetry.scripts]
pydevmgr_dump = "pydevmgr_elt.scripts.dump:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
